[project]
name = "reloop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.115.14",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "passlib>=1.7.4",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "pyzbar>=0.1.9",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
]
